v0.5/fastn-lang/src/snapshots/fastn_p1__test__parse_output@000-tutorial.ftd.snap
---
source: fastn-p1/src/lib.rs
expression: "fastn_section::ParseOutput::parse(\"foo\", &s).debug(&s)"
input_file: fastn-p1/t/000-tutorial.ftd
---
doc_name: foo
items:
  - comment: ";; this file contains examples of most constructs\n"
  - comment: ";; this is another comment - no more doc comments are allowed\n"
  - error: unexpected_doc_comment
  - error: kinded_name_not_found
module_doc: ";-; this is doc-comment\n;-; which can span multiple lines\n;-;\n;-; it is used to describe the file\n;-; and its purpose ;; this is not comment, and is part of doc comment\n"
