v0.5/fastn-lang/src/snapshots/fastn_p1__test__parse_output@001-empty.ftd.snap
---
source: fastn-p1/src/lib.rs
expression: "fastn_lang::ParseOutput::new(\"foo\", &s).debug(&s)"
input_file: fastn-p1/t/001-empty.ftd
---
doc_name: foo
items: []
module_doc: ~
