v0.5/fastn-lang/src/snapshots/fastn_p1__test__parse_output@002-few-comments.ftd.snap
---
source: fastn-p1/src/lib.rs
expression: "fastn_section::ParseOutput::new(\"foo\", &s).debug(&s)"
input_file: fastn-p1/t/002-few-comments.ftd
---
doc_name: foo
items:
  - comment: ";; this is first comment\n"
  - comment: ";; this is second comment\n"
  - comment: ";; this is multiline comment\n"
  - comment: ";; this is one more comment, this does not start at the beginning of the line\n"
module_doc: ~
